--- a/common/head.html
+++ b/common/head.html
@@ -2,7 +2,7 @@
        "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
-	<meta charset="latin-1">
+	<meta charset="ISO-8859-1">
 	<title>Seufer & Bunker Weinerei GmbH & Co. KG</title>
 	<!-- Stylesheet für Monitore: -->
 	<link rel="stylesheet" media="screen" href="./styles/screen.css">
