--- a/common/head.html
+++ b/common/head.html
@@ -6,8 +6,8 @@
 	<title>Seufer & Bunker Weinerei GmbH & Co. KG</title>
 	<!-- Stylesheet für Monitore: -->
 	<link rel="stylesheet" media="screen" href="./styles/screen.css">
-	<!-- Stylesheet für Mobile Geräte(TODO): -->
-	<!-- <link rel="stylesheet" media="handheld" href="./styles/handheld.css"> -->
+	<!-- Stylesheet für Mobile Geräte: -->
+	<link rel="stylesheet" media="handheld" href="./styles/handheld.css">
 	<script src="javascript/javascript.js" type="text/javascript"></script>
 	<script src="javascript/jquery-1.9.1.js" type="text/javascript"></script>
 	<script type="text/javascript" src="javascript/sha256.js"></script>
